fix(chat): bottom margin fix for scrolling on Safari

--- a/src/app/room/chat/chat.component.scss
+++ b/src/app/room/chat/chat.component.scss
@@ -88,7 +88,7 @@
 	overflow-y: scroll;
 	transition: all 0.5s;
 	font-size: 16px;
-	padding-bottom: 5px;
+	margin-bottom: 10px;
 	overflow-x: hidden;
 }
 .top-reached {
